--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,11 +1,13 @@
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 html{line-height:1.15;-webkit-text-size-adjust:100%}body{margin:0}main{display:block}h1{font-size:2em;margin:.67em 0}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}img{border-style:none}button,input,optgroup,select,textarea{font-family:inherit;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,[type="button"],[type="reset"],[type="submit"]{-webkit-appearance:button}button::-moz-focus-inner,[type="button"]::-moz-focus-inner,[type="reset"]::-moz-focus-inner,[type="submit"]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type="button"]:-moz-focusring,[type="reset"]:-moz-focusring,[type="submit"]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{vertical-align:baseline}textarea{overflow:auto}[type="checkbox"],[type="radio"]{box-sizing:border-box;padding:0}[type="number"]::-webkit-inner-spin-button,[type="number"]::-webkit-outer-spin-button{height:auto}[type="search"]{-webkit-appearance:textfield;outline-offset:-2px}[type="search"]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details{display:block}summary{display:list-item}template{display:none}[hidden]{display:none}
 
-body {
+html {
     font-family: Arial, Verdana, sans-serif;
     font-size: 16px;
     line-height: 1.5;
     color: #0D1620;
+}
+body {
     max-width: 700px;
     margin: 0 auto;
     padding: 0 20px;
@@ -36,46 +38,114 @@ img {
     max-width: 700px;
 }
 a {
-  color: #c2255c;
+    color: #c2255c;
 }
 
 a:hover {
-  background-color: #c2255c;
-  color: #fff;
+    background-color: #c2255c;
+    color: #fff;
 }
 
 nav {
-  padding: 30px 0;
+    padding: 30px 0;
 }
 nav a {
-  padding: 5px 0px;
-  margin-right: 15px;
-  font-size: 20px;
-  text-decoration: none;
-  color: #333;
-  border-bottom: solid 3px transparent;
+    padding: 5px 0px;
+    margin-right: 15px;
+    font-size: 20px;
+    text-decoration: none;
+    color: #333;
+    border-bottom: solid 3px transparent;
 }
 
 nav a:hover {
-  color: #333;
-  background-color: transparent;
-  border-color: #0D1620;
+    color: #333;
+    background-color: transparent;
+    border-color: #0D1620;
 }
 main {
     min-height: calc(100vh - 200px);
 }
-.blog-list-item {
+
+.intro > .header {
     display: flex;
     justify-content: space-between;
+    align-items: center;
+}
+
+.blog-list {
+    position: relative;
+}
+.blog-list.cards {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+
+.blog-switch-view {
+    display: flex;
+    position: absolute;
+    right: 0;
+    top: -65px;
+    height: 42px;
+}
+
+#list-switch, #cards-switch {
+    border: 2px solid transparent;
+    border-radius: 5px;
+    padding: 5px;
+    margin-left: 10px;
+}
+
+#list-switch:hover, #cards-switch:hover {
+    border-color: #333;
+}
+
+#list-switch.active, #cards-switch.active {
+    border-color: #555;
+}
+
+
+.blog-list-item {
     text-decoration: none;
-    border-bottom: 1px solid #ccc;
     color: #0D1620;
+}
+
+.blog-list-item > div {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid #ccc;
 }
 
 .blog-list-item:hover {
     color: #333;
     background-color: transparent;
     text-decoration: underline 2px;
+}
+
+.cards > .blog-list-item {
+    width: calc(100%);
+    margin-bottom: 30px;
+    border: 2px solid #ccc;
+    border-radius: 5px;
+}
+
+.cards > .blog-list-item:hover {
+    border-color: #0D1620;
+}
+
+@media (min-width: 600px) {
+    .cards > .blog-list-item {
+        width: calc(50% - 15px);
+    }
+}
+
+.cards > .blog-list-item > div {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 10px 26px;
+    height: calc(100% - 20px);
 }
 
 .blog-list-item h2, h3 {
@@ -98,4 +168,3 @@ footer {
     padding-top: 10px;
     padding-bottom: 10px;
 }
-
